Fix minor code issues in Hasher.java