@@ -17,6 +17,8 @@ package org.caffinitas.ohc.linked;
 
 import org.caffinitas.ohc.HashAlgorithm;
 
+import java.lang.reflect.InvocationTargetException;
+
 abstract class Hasher
 {
     static Hasher create(HashAlgorithm hashAlgorithm)
@@ -24,18 +26,18 @@ abstract class Hasher
         String cls = forAlg(hashAlgorithm);
         try
         {
-            return (Hasher) Class.forName(cls).newInstance();
+            return (Hasher) Class.forName(cls).getDeclaredConstructor().newInstance();
         }
-        catch (ClassNotFoundException e)
+        catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException e)
         {
             if (hashAlgorithm == HashAlgorithm.XX)
             {
                 cls = forAlg(HashAlgorithm.CRC32);
                 try
                 {
-                    return (Hasher) Class.forName(cls).newInstance();
+                    return (Hasher) Class.forName(cls).getDeclaredConstructor().newInstance();
                 }
-                catch (InstantiationException | ClassNotFoundException | IllegalAccessException e1)
+                catch (InstantiationException | ClassNotFoundException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e1)
                 {
                     throw new RuntimeException(e1);
                 }
@@ -51,7 +53,7 @@ abstract class Hasher
     private static String forAlg(HashAlgorithm hashAlgorithm)
     {
         return Hasher.class.getName().substring(0, Hasher.class.getName().lastIndexOf('.') + 1)
-               + hashAlgorithm.name().substring(0, 1)
+               + hashAlgorithm.name().charAt(0)
                + hashAlgorithm.name().substring(1).toLowerCase()
                + "Hash";
     }
